--- a/src/HttpClient.Cache/HttpClient.Cache.csproj
+++ b/src/HttpClient.Cache/HttpClient.Cache.csproj
@@ -8,7 +8,7 @@
     <Description>HTTP/1.1 caching compliant message handler for HttpClient.</Description>
     <PackageProjectUrl>https://github.com/rmja/HttpClient.Cache</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>HttpClient;Cache;HttpCache;FileCache</PackageTags>.
+    <PackageTags>HttpClient;Cache;HttpCache;FileCache</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/rmja/HttpClient.Cache.git</RepositoryUrl>
     <Version>0.1.0</Version>
