--- a/src/HttpClient.Cache/HttpClient.Cache.csproj
+++ b/src/HttpClient.Cache/HttpClient.Cache.csproj
@@ -19,6 +19,7 @@
     <None Include="..\..\README.md" Pack="true" PackagePath="">
       <Link>Properties\README.md</Link>
     </None>
+    <InternalsVisibleTo Include="HttpClient.Cache.Tests" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.6" />
